Kaggle Notebook | XGBRegressor | XGBRegressor fix submission index

--- a/kaggle/house_prices/xgbregressor.ipynb
+++ b/kaggle/house_prices/xgbregressor.ipynb
@@ -3,19 +3,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "84da7296",
+   "id": "e6492b70",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-14T15:15:56.822838Z",
-     "iopub.status.busy": "2025-09-14T15:15:56.822437Z",
-     "iopub.status.idle": "2025-09-14T15:15:58.612627Z",
-     "shell.execute_reply": "2025-09-14T15:15:58.611797Z"
+     "iopub.execute_input": "2025-09-14T15:32:06.072548Z",
+     "iopub.status.busy": "2025-09-14T15:32:06.072194Z",
+     "iopub.status.idle": "2025-09-14T15:32:07.950884Z",
+     "shell.execute_reply": "2025-09-14T15:32:07.949992Z"
     },
     "papermill": {
-     "duration": 1.796081,
-     "end_time": "2025-09-14T15:15:58.614304",
+     "duration": 1.884557,
+     "end_time": "2025-09-14T15:32:07.952718",
      "exception": false,
-     "start_time": "2025-09-14T15:15:56.818223",
+     "start_time": "2025-09-14T15:32:06.068161",
      "status": "completed"
     },
     "tags": []
@@ -30,19 +30,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6e5c2920",
+   "id": "090f1256",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-14T15:15:58.620412Z",
-     "iopub.status.busy": "2025-09-14T15:15:58.620024Z",
-     "iopub.status.idle": "2025-09-14T15:16:01.396063Z",
-     "shell.execute_reply": "2025-09-14T15:16:01.395054Z"
+     "iopub.execute_input": "2025-09-14T15:32:07.959250Z",
+     "iopub.status.busy": "2025-09-14T15:32:07.958829Z",
+     "iopub.status.idle": "2025-09-14T15:32:10.770303Z",
+     "shell.execute_reply": "2025-09-14T15:32:10.769396Z"
     },
     "papermill": {
-     "duration": 2.780627,
-     "end_time": "2025-09-14T15:16:01.397730",
+     "duration": 2.816676,
+     "end_time": "2025-09-14T15:32:10.772346",
      "exception": false,
-     "start_time": "2025-09-14T15:15:58.617103",
+     "start_time": "2025-09-14T15:32:07.955670",
      "status": "completed"
     },
     "tags": []
@@ -60,19 +60,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "829763d9",
+   "id": "4dc9e4a1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-14T15:16:01.403841Z",
-     "iopub.status.busy": "2025-09-14T15:16:01.403387Z",
-     "iopub.status.idle": "2025-09-14T15:17:14.228764Z",
-     "shell.execute_reply": "2025-09-14T15:17:14.226870Z"
+     "iopub.execute_input": "2025-09-14T15:32:10.778871Z",
+     "iopub.status.busy": "2025-09-14T15:32:10.778330Z",
+     "iopub.status.idle": "2025-09-14T15:33:23.519870Z",
+     "shell.execute_reply": "2025-09-14T15:33:23.518848Z"
     },
     "papermill": {
-     "duration": 72.832565,
-     "end_time": "2025-09-14T15:17:14.232776",
+     "duration": 72.747415,
+     "end_time": "2025-09-14T15:33:23.522377",
      "exception": false,
-     "start_time": "2025-09-14T15:16:01.400211",
+     "start_time": "2025-09-14T15:32:10.774962",
      "status": "completed"
     },
     "tags": []
@@ -84,7 +84,7 @@
      "text": [
       "XGBoost Hyperparameter Tuning Pipeline\n",
       "==================================================\n",
-      "Start time: 2025-09-14 15:16:01.405344\n",
+      "Start time: 2025-09-14 15:32:10.780384\n",
       "\n",
       "Loading and exploring data...\n",
       "==================================================\n",
@@ -181,7 +181,7 @@
       "Report saved to: xgboost_results/tuning_report.json\n",
       "\n",
       "Pipeline completed!\n",
-      "End time: 2025-09-14 15:17:14.225006\n",
+      "End time: 2025-09-14 15:33:23.515525\n",
       "Baseline RMSE: 0.1455\n",
       "Final RMSE: 26,460.62\n",
       "Improvement: 11.1%\n"
@@ -201,19 +201,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b102bf72",
+   "id": "d7e6b72a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-14T15:17:14.239068Z",
-     "iopub.status.busy": "2025-09-14T15:17:14.238726Z",
-     "iopub.status.idle": "2025-09-14T15:17:14.366788Z",
-     "shell.execute_reply": "2025-09-14T15:17:14.365961Z"
+     "iopub.execute_input": "2025-09-14T15:33:23.528684Z",
+     "iopub.status.busy": "2025-09-14T15:33:23.528336Z",
+     "iopub.status.idle": "2025-09-14T15:33:23.655287Z",
+     "shell.execute_reply": "2025-09-14T15:33:23.654239Z"
     },
     "papermill": {
-     "duration": 0.133088,
-     "end_time": "2025-09-14T15:17:14.368396",
+     "duration": 0.132216,
+     "end_time": "2025-09-14T15:33:23.657103",
      "exception": false,
-     "start_time": "2025-09-14T15:17:14.235308",
+     "start_time": "2025-09-14T15:33:23.524887",
      "status": "completed"
     },
     "tags": []
@@ -326,19 +326,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e405717d",
+   "id": "99d5dac8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-14T15:17:14.375358Z",
-     "iopub.status.busy": "2025-09-14T15:17:14.374580Z",
-     "iopub.status.idle": "2025-09-14T15:17:14.393034Z",
-     "shell.execute_reply": "2025-09-14T15:17:14.392334Z"
+     "iopub.execute_input": "2025-09-14T15:33:23.664374Z",
+     "iopub.status.busy": "2025-09-14T15:33:23.663540Z",
+     "iopub.status.idle": "2025-09-14T15:33:23.681281Z",
+     "shell.execute_reply": "2025-09-14T15:33:23.680645Z"
     },
     "papermill": {
-     "duration": 0.023301,
-     "end_time": "2025-09-14T15:17:14.394554",
+     "duration": 0.022719,
+     "end_time": "2025-09-14T15:33:23.682806",
      "exception": false,
-     "start_time": "2025-09-14T15:17:14.371253",
+     "start_time": "2025-09-14T15:33:23.660087",
      "status": "completed"
     },
     "tags": []
@@ -365,19 +365,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e1521ef0",
+   "id": "0337a6fa",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-14T15:17:14.401317Z",
-     "iopub.status.busy": "2025-09-14T15:17:14.401017Z",
-     "iopub.status.idle": "2025-09-14T15:17:14.432573Z",
-     "shell.execute_reply": "2025-09-14T15:17:14.431652Z"
+     "iopub.execute_input": "2025-09-14T15:33:23.689748Z",
+     "iopub.status.busy": "2025-09-14T15:33:23.689048Z",
+     "iopub.status.idle": "2025-09-14T15:33:23.718186Z",
+     "shell.execute_reply": "2025-09-14T15:33:23.717326Z"
     },
     "papermill": {
-     "duration": 0.036815,
-     "end_time": "2025-09-14T15:17:14.434312",
+     "duration": 0.033884,
+     "end_time": "2025-09-14T15:33:23.719554",
      "exception": false,
-     "start_time": "2025-09-14T15:17:14.397497",
+     "start_time": "2025-09-14T15:33:23.685670",
      "status": "completed"
     },
     "tags": []
@@ -753,45 +753,45 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d29b4f39",
+   "id": "83b4f75c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-14T15:17:14.441776Z",
-     "iopub.status.busy": "2025-09-14T15:17:14.441510Z",
-     "iopub.status.idle": "2025-09-14T15:17:14.454150Z",
-     "shell.execute_reply": "2025-09-14T15:17:14.453243Z"
+     "iopub.execute_input": "2025-09-14T15:33:23.727502Z",
+     "iopub.status.busy": "2025-09-14T15:33:23.726694Z",
+     "iopub.status.idle": "2025-09-14T15:33:23.739388Z",
+     "shell.execute_reply": "2025-09-14T15:33:23.738641Z"
     },
     "papermill": {
-     "duration": 0.018112,
-     "end_time": "2025-09-14T15:17:14.455731",
+     "duration": 0.018076,
+     "end_time": "2025-09-14T15:33:23.740919",
      "exception": false,
-     "start_time": "2025-09-14T15:17:14.437619",
+     "start_time": "2025-09-14T15:33:23.722843",
      "status": "completed"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
-    "submission_df = df[[\"Id\", \"SalePrice\"]]\n",
+    "submission_df = df[[\"Id\", \"SalePrice\"]].set_index(\"Id\")\n",
     "submission_df.to_csv(\"/kaggle/working/submission.csv\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "919a2c4d",
+   "id": "630ea88e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-14T15:17:14.463671Z",
-     "iopub.status.busy": "2025-09-14T15:17:14.462917Z",
-     "iopub.status.idle": "2025-09-14T15:17:14.471916Z",
-     "shell.execute_reply": "2025-09-14T15:17:14.471165Z"
+     "iopub.execute_input": "2025-09-14T15:33:23.748132Z",
+     "iopub.status.busy": "2025-09-14T15:33:23.747851Z",
+     "iopub.status.idle": "2025-09-14T15:33:23.756749Z",
+     "shell.execute_reply": "2025-09-14T15:33:23.755981Z"
     },
     "papermill": {
-     "duration": 0.014422,
-     "end_time": "2025-09-14T15:17:14.473410",
+     "duration": 0.014074,
+     "end_time": "2025-09-14T15:33:23.758103",
      "exception": false,
-     "start_time": "2025-09-14T15:17:14.458988",
+     "start_time": "2025-09-14T15:33:23.744029",
      "status": "completed"
     },
     "tags": []
@@ -818,86 +818,79 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Id</th>\n",
        "      <th>SalePrice</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Id</th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1461</td>\n",
+       "      <th>1461</th>\n",
        "      <td>121793.750000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1462</td>\n",
+       "      <th>1462</th>\n",
        "      <td>161312.359375</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1463</td>\n",
+       "      <th>1463</th>\n",
        "      <td>164678.578125</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1464</td>\n",
+       "      <th>1464</th>\n",
        "      <td>189590.671875</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1465</td>\n",
+       "      <th>1465</th>\n",
        "      <td>153658.796875</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1454</th>\n",
-       "      <td>2915</td>\n",
+       "      <th>2915</th>\n",
        "      <td>76849.453125</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1455</th>\n",
-       "      <td>2916</td>\n",
+       "      <th>2916</th>\n",
        "      <td>83232.945312</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1456</th>\n",
-       "      <td>2917</td>\n",
+       "      <th>2917</th>\n",
        "      <td>163478.546875</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1457</th>\n",
-       "      <td>2918</td>\n",
+       "      <th>2918</th>\n",
        "      <td>117322.726562</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1458</th>\n",
-       "      <td>2919</td>\n",
+       "      <th>2919</th>\n",
        "      <td>199022.187500</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1459 rows × 2 columns</p>\n",
+       "<p>1459 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        Id      SalePrice\n",
-       "0     1461  121793.750000\n",
-       "1     1462  161312.359375\n",
-       "2     1463  164678.578125\n",
-       "3     1464  189590.671875\n",
-       "4     1465  153658.796875\n",
-       "...    ...            ...\n",
-       "1454  2915   76849.453125\n",
-       "1455  2916   83232.945312\n",
-       "1456  2917  163478.546875\n",
-       "1457  2918  117322.726562\n",
-       "1458  2919  199022.187500\n",
+       "          SalePrice\n",
+       "Id                 \n",
+       "1461  121793.750000\n",
+       "1462  161312.359375\n",
+       "1463  164678.578125\n",
+       "1464  189590.671875\n",
+       "1465  153658.796875\n",
+       "...             ...\n",
+       "2915   76849.453125\n",
+       "2916   83232.945312\n",
+       "2917  163478.546875\n",
+       "2918  117322.726562\n",
+       "2919  199022.187500\n",
        "\n",
-       "[1459 rows x 2 columns]"
+       "[1459 rows x 1 columns]"
       ]
      },
      "execution_count": 8,
@@ -912,13 +905,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aedbbfe1",
+   "id": "5892661f",
    "metadata": {
     "papermill": {
-     "duration": 0.002995,
-     "end_time": "2025-09-14T15:17:14.479844",
+     "duration": 0.003041,
+     "end_time": "2025-09-14T15:33:23.764727",
      "exception": false,
-     "start_time": "2025-09-14T15:17:14.476849",
+     "start_time": "2025-09-14T15:33:23.761686",
      "status": "completed"
     },
     "tags": []
@@ -967,14 +960,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 85.722457,
-   "end_time": "2025-09-14T15:17:17.103311",
+   "duration": 85.46648,
+   "end_time": "2025-09-14T15:33:26.386428",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2025-09-14T15:15:51.380854",
+   "start_time": "2025-09-14T15:32:00.919948",
    "version": "2.6.0"
   }
  },
