Kaggle Notebook | Linear + RF | Linear + RF downsized

--- a/linear-rf.ipynb
+++ b/linear-rf.ipynb
@@ -3,25 +3,25 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c17223fb",
+   "id": "1d7a4866",
    "metadata": {
     "_cell_guid": "1e2b0dcf-cf44-4344-b97c-e5fd2d2b5b58",
     "_uuid": "9610883e-b54f-4b74-8bce-8cb8ebe7098f",
     "collapsed": false,
     "execution": {
-     "iopub.execute_input": "2025-09-15T20:07:44.913794Z",
-     "iopub.status.busy": "2025-09-15T20:07:44.913456Z",
-     "iopub.status.idle": "2025-09-15T20:07:49.749370Z",
-     "shell.execute_reply": "2025-09-15T20:07:49.748545Z"
+     "iopub.execute_input": "2025-09-16T07:14:30.372009Z",
+     "iopub.status.busy": "2025-09-16T07:14:30.371698Z",
+     "iopub.status.idle": "2025-09-16T07:14:35.091696Z",
+     "shell.execute_reply": "2025-09-16T07:14:35.090884Z"
     },
     "jupyter": {
      "outputs_hidden": false
     },
     "papermill": {
-     "duration": 4.841646,
-     "end_time": "2025-09-15T20:07:49.751097",
+     "duration": 4.725747,
+     "end_time": "2025-09-16T07:14:35.093596",
      "exception": false,
-     "start_time": "2025-09-15T20:07:44.909451",
+     "start_time": "2025-09-16T07:14:30.367849",
      "status": "completed"
     },
     "tags": []
@@ -43,25 +43,25 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "38ff0a42",
+   "id": "75d774ba",
    "metadata": {
     "_cell_guid": "11c94dff-452a-4386-a9b3-c7ebcd440ef2",
     "_uuid": "769c364e-7f87-4d84-be80-8a5e79eadd02",
     "collapsed": false,
     "execution": {
-     "iopub.execute_input": "2025-09-15T20:07:49.757693Z",
-     "iopub.status.busy": "2025-09-15T20:07:49.757252Z",
-     "iopub.status.idle": "2025-09-15T20:07:49.768309Z",
-     "shell.execute_reply": "2025-09-15T20:07:49.767338Z"
+     "iopub.execute_input": "2025-09-16T07:14:35.100054Z",
+     "iopub.status.busy": "2025-09-16T07:14:35.099630Z",
+     "iopub.status.idle": "2025-09-16T07:14:35.108587Z",
+     "shell.execute_reply": "2025-09-16T07:14:35.107835Z"
     },
     "jupyter": {
      "outputs_hidden": false
     },
     "papermill": {
-     "duration": 0.016085,
-     "end_time": "2025-09-15T20:07:49.770084",
+     "duration": 0.013313,
+     "end_time": "2025-09-16T07:14:35.109794",
      "exception": false,
-     "start_time": "2025-09-15T20:07:49.753999",
+     "start_time": "2025-09-16T07:14:35.096481",
      "status": "completed"
     },
     "tags": []
@@ -121,25 +121,25 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "fe6421d4",
+   "id": "15adf95d",
    "metadata": {
     "_cell_guid": "1ea3db31-9574-4643-aaf2-ff89f5c92810",
     "_uuid": "ab4f603a-00fa-419d-adab-dc9fc79761de",
     "collapsed": false,
     "execution": {
-     "iopub.execute_input": "2025-09-15T20:07:49.776068Z",
-     "iopub.status.busy": "2025-09-15T20:07:49.775775Z",
-     "iopub.status.idle": "2025-09-15T20:07:50.559705Z",
-     "shell.execute_reply": "2025-09-15T20:07:50.558392Z"
+     "iopub.execute_input": "2025-09-16T07:14:35.115644Z",
+     "iopub.status.busy": "2025-09-16T07:14:35.115357Z",
+     "iopub.status.idle": "2025-09-16T07:14:35.927248Z",
+     "shell.execute_reply": "2025-09-16T07:14:35.926422Z"
     },
     "jupyter": {
      "outputs_hidden": false
     },
     "papermill": {
-     "duration": 0.788642,
-     "end_time": "2025-09-15T20:07:50.561233",
+     "duration": 0.816677,
+     "end_time": "2025-09-16T07:14:35.928928",
      "exception": false,
-     "start_time": "2025-09-15T20:07:49.772591",
+     "start_time": "2025-09-16T07:14:35.112251",
      "status": "completed"
     },
     "tags": []
@@ -216,25 +216,25 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6fe99731",
+   "id": "47478f44",
    "metadata": {
     "_cell_guid": "dd8ac53e-9023-4b09-a596-4be3681c5a46",
     "_uuid": "55022daa-da6e-4e8e-93c7-9bae6df637d1",
     "collapsed": false,
     "execution": {
-     "iopub.execute_input": "2025-09-15T20:07:50.567443Z",
-     "iopub.status.busy": "2025-09-15T20:07:50.567094Z",
-     "iopub.status.idle": "2025-09-15T20:07:50.585790Z",
-     "shell.execute_reply": "2025-09-15T20:07:50.584457Z"
+     "iopub.execute_input": "2025-09-16T07:14:35.935718Z",
+     "iopub.status.busy": "2025-09-16T07:14:35.935368Z",
+     "iopub.status.idle": "2025-09-16T07:14:35.949581Z",
+     "shell.execute_reply": "2025-09-16T07:14:35.948733Z"
     },
     "jupyter": {
      "outputs_hidden": false
     },
     "papermill": {
-     "duration": 0.023666,
-     "end_time": "2025-09-15T20:07:50.587524",
+     "duration": 0.019317,
+     "end_time": "2025-09-16T07:14:35.950942",
      "exception": false,
-     "start_time": "2025-09-15T20:07:50.563858",
+     "start_time": "2025-09-16T07:14:35.931625",
      "status": "completed"
     },
     "tags": []
@@ -244,12 +244,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1961, 424) (1961, 557)\n",
-      "[[ 0.          0.          0.          0.          0.        ]\n",
-      " [ 0.0059485  -0.00285132 -0.0046752  -0.00063914 -0.03185248]\n",
-      " [ 0.00578281 -0.02411763 -0.00705199 -0.01895477 -0.03185248]\n",
-      " [ 0.00104825  0.02383639 -0.00893406 -0.02206003 -0.03185248]\n",
-      " [ 0.00169973 -0.02461781  0.01194331  0.0047779  -0.03185248]]\n",
       "(1961, 981)\n"
      ]
     }
@@ -261,8 +255,6 @@
     "        Y[:-1]\n",
     "    ]\n",
     ")\n",
-    "print(Y_lag_1.shape, X_std.shape)\n",
-    "print(Y_lag_1[:5, :5])\n",
     "\n",
     "X_std = np.concatenate(\n",
     "    [\n",
@@ -277,25 +269,25 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "bcd1e388",
+   "id": "1a7f08a4",
    "metadata": {
     "_cell_guid": "cbeea3a0-4e67-43e9-9586-2f4fdeec2808",
     "_uuid": "9dafd650-1ce2-49c8-a5da-63f38faf65ca",
     "collapsed": false,
     "execution": {
-     "iopub.execute_input": "2025-09-15T20:07:50.594299Z",
-     "iopub.status.busy": "2025-09-15T20:07:50.593935Z",
-     "iopub.status.idle": "2025-09-15T20:28:33.431354Z",
-     "shell.execute_reply": "2025-09-15T20:28:33.430554Z"
+     "iopub.execute_input": "2025-09-16T07:14:35.957189Z",
+     "iopub.status.busy": "2025-09-16T07:14:35.956867Z",
+     "iopub.status.idle": "2025-09-16T07:20:49.206415Z",
+     "shell.execute_reply": "2025-09-16T07:20:49.205120Z"
     },
     "jupyter": {
      "outputs_hidden": false
     },
     "papermill": {
-     "duration": 1242.843033,
-     "end_time": "2025-09-15T20:28:33.433219",
+     "duration": 373.255742,
+     "end_time": "2025-09-16T07:20:49.209247",
      "exception": false,
-     "start_time": "2025-09-15T20:07:50.590186",
+     "start_time": "2025-09-16T07:14:35.953505",
      "status": "completed"
     },
     "tags": []
@@ -308,32 +300,19 @@
       "Service Name: kaggle_evaluation_client.KaggleEvaluationService\n",
       "    /kaggle_evaluation_client.KaggleEvaluationService/Send\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/kaggle/input/mitsui-commodity-prediction-challenge/kaggle_evaluation/core/templates.py:96: RuntimeWarning: 1219 seconds elapsed before server startup.\n",
-      "                This exceeds the startup time limit of 900 seconds that the gateway will enforce\n",
-      "                during the rerun on the hidden test set. Start the server before performing any time consuming steps.\n",
-      "  warnings.warn(\n"
-     ]
     }
    ],
    "source": [
     "\n",
-    "# search = clf.fit(X_std, Y)\n",
-    "# alpha = search.best_params_[\"alpha\"]\n",
-    "# print(X.shape, Y.shape)\n",
-    "# print(\"Best regularisation parameter :\", alpha)\n",
-    "# lin = Ridge(alpha=alpha)\n",
     "lin.fit(X_std, Y)\n",
     "Y_res = Y - lin.predict(X_std)\n",
     "\n",
     "tr = RandomForestRegressor(\n",
     "    criterion=\"friedman_mse\",\n",
     "    # learning_rate=.1,\n",
-    "    n_estimators=50\n",
+    "    n_estimators=20,\n",
+    "    max_features=.8,\n",
+    "    max_samples=.8\n",
     ")\n",
     "tr.fit(X_std, Y_res)\n",
     "\n",
@@ -424,25 +403,25 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7b48e2ac",
+   "id": "446b5efc",
    "metadata": {
     "_cell_guid": "a1e87b55-b843-4b9b-9b60-9db810beb2ec",
     "_uuid": "0dce2b1d-c4a1-4461-9c8d-d5ef7c3b710a",
     "collapsed": false,
     "execution": {
-     "iopub.execute_input": "2025-09-15T20:28:33.447824Z",
-     "iopub.status.busy": "2025-09-15T20:28:33.447043Z",
-     "iopub.status.idle": "2025-09-15T20:28:43.271830Z",
-     "shell.execute_reply": "2025-09-15T20:28:43.270779Z"
+     "iopub.execute_input": "2025-09-16T07:20:49.223543Z",
+     "iopub.status.busy": "2025-09-16T07:20:49.223267Z",
+     "iopub.status.idle": "2025-09-16T07:20:59.052510Z",
+     "shell.execute_reply": "2025-09-16T07:20:59.051487Z"
     },
     "jupyter": {
      "outputs_hidden": false
     },
     "papermill": {
-     "duration": 9.836124,
-     "end_time": "2025-09-15T20:28:43.273233",
+     "duration": 9.840898,
+     "end_time": "2025-09-16T07:20:59.054087",
      "exception": false,
-     "start_time": "2025-09-15T20:28:33.437109",
+     "start_time": "2025-09-16T07:20:49.213189",
      "status": "completed"
     },
     "tags": []
@@ -453,61 +432,61 @@
      "output_type": "stream",
      "text": [
       "     date_id  target_0  target_1  target_2  target_3  target_4  target_5  \\\n",
-      "0       1827 -0.002887  0.003736 -0.000247  0.000457 -0.001864 -0.006073   \n",
-      "1       1828 -0.149532  0.041704 -0.349988 -0.358880 -0.305654  0.501944   \n",
-      "2       1829  0.002446  0.008787 -0.012908  0.000926  0.010207  0.000943   \n",
-      "3       1830  0.002459 -0.008807  0.023542 -0.000173 -0.013974 -0.014714   \n",
-      "4       1831  0.004627 -0.004232 -0.001949  0.003686 -0.018632 -0.008710   \n",
+      "0       1827 -0.001832  0.002121 -0.000326 -0.000581 -0.001689 -0.006176   \n",
+      "1       1828 -0.147094  0.039108 -0.349796 -0.359601 -0.303252  0.506411   \n",
+      "2       1829  0.003317  0.009457 -0.012066  0.002673  0.010831 -0.000960   \n",
+      "3       1830  0.001443 -0.008683  0.023393  0.000665 -0.012959 -0.015229   \n",
+      "4       1831  0.004284 -0.004237 -0.002020  0.003751 -0.016656 -0.007417   \n",
       "..       ...       ...       ...       ...       ...       ...       ...   \n",
-      "129     1956  0.002916  0.004324  0.000317 -0.003676  0.041293  0.013798   \n",
-      "130     1957 -0.011815 -0.047962  0.043598 -0.024550  0.033526 -0.108787   \n",
-      "131     1958 -0.013096  0.031740  0.004736  0.008051  0.022044  0.006951   \n",
-      "132     1959 -0.003761  0.023923  0.003179  0.010702  0.035519  0.030291   \n",
-      "133     1960 -0.005635  0.016600  0.002394 -0.008597  0.007382 -0.019451   \n",
+      "129     1956  0.001461  0.005642 -0.000917 -0.004548  0.041513  0.014764   \n",
+      "130     1957 -0.012813 -0.045300  0.042906 -0.024308  0.034431 -0.110515   \n",
+      "131     1958 -0.012248  0.030692  0.004153  0.007983  0.021024  0.005966   \n",
+      "132     1959 -0.003302  0.023092  0.001791  0.010225  0.033774  0.029349   \n",
+      "133     1960 -0.005889  0.015509  0.003840 -0.006059  0.007352 -0.021576   \n",
       "\n",
       "     target_6  target_7  target_8  ...  target_414  target_415  target_416  \\\n",
-      "0   -0.000544  0.013392  0.000256  ...   -0.001670   -0.000259   -0.020273   \n",
-      "1    0.099842  0.252578 -0.256775  ...   -0.464721    0.336851   -0.358468   \n",
-      "2   -0.004640  0.017279  0.004966  ...    0.009365   -0.023001    0.010290   \n",
-      "3    0.006880 -0.011069  0.004973  ...   -0.008030   -0.042205    0.026784   \n",
-      "4    0.005562 -0.005814  0.000419  ...   -0.013019    0.003868   -0.004545   \n",
+      "0   -0.000125  0.012483  0.000138  ...   -0.002637   -0.001817   -0.023821   \n",
+      "1    0.099246  0.250137 -0.255494  ...   -0.465044    0.338110   -0.360874   \n",
+      "2   -0.005809  0.017359  0.004289  ...    0.011437   -0.024680    0.009241   \n",
+      "3    0.006634 -0.011972  0.004128  ...   -0.009414   -0.044654    0.025096   \n",
+      "4    0.005213 -0.006222  0.000261  ...   -0.013071    0.001625   -0.004294   \n",
       "..        ...       ...       ...  ...         ...         ...         ...   \n",
-      "129 -0.026679  0.060666  0.015584  ...   -0.027419    0.028168    0.071894   \n",
-      "130  0.034863  0.144623  0.123491  ...    0.448530   -0.135200    0.306166   \n",
-      "131 -0.022746  0.069725 -0.015613  ...   -0.035984    0.037982    0.076410   \n",
-      "132 -0.023513  0.058704 -0.006004  ...   -0.038837    0.037460    0.068244   \n",
-      "133 -0.012497  0.070846 -0.006290  ...   -0.029077    0.084354    0.088695   \n",
+      "129 -0.026466  0.063292  0.013490  ...   -0.027826    0.026991    0.075084   \n",
+      "130  0.033538  0.146983  0.123156  ...    0.448514   -0.133466    0.306082   \n",
+      "131 -0.023254  0.069171 -0.014649  ...   -0.037290    0.040856    0.080502   \n",
+      "132 -0.023294  0.058014 -0.003526  ...   -0.039052    0.037772    0.072279   \n",
+      "133 -0.013713  0.067525 -0.004524  ...   -0.028851    0.082874    0.088158   \n",
       "\n",
       "     target_417  target_418  target_419  target_420  target_421  target_422  \\\n",
-      "0     -0.000605    0.023295    0.012466    0.008097   -0.003179    0.003530   \n",
-      "1      0.092233    0.406585    0.742706    0.397618   -0.003261    0.389334   \n",
-      "2      0.024437   -0.011186   -0.021787   -0.010556   -0.010932    0.011967   \n",
-      "3      0.006228   -0.013795   -0.035553   -0.023651   -0.042627    0.003809   \n",
-      "4      0.025141    0.008956    0.002975   -0.012729   -0.013753    0.017008   \n",
+      "0     -0.002629    0.025105    0.016009    0.004750    0.003775    0.002141   \n",
+      "1      0.088461    0.407475    0.746306    0.399071   -0.000558    0.387714   \n",
+      "2      0.027625   -0.011039   -0.020528   -0.013437   -0.009183    0.011656   \n",
+      "3      0.005176   -0.013171   -0.034191   -0.025945   -0.045529    0.002453   \n",
+      "4      0.027770    0.011156    0.000951   -0.013162   -0.018917    0.018980   \n",
       "..          ...         ...         ...         ...         ...         ...   \n",
-      "129    0.000228    0.146900    0.059818   -0.014861    0.101094   -0.028003   \n",
-      "130    0.816198   -0.107201   -0.039040   -0.160670    0.037138    0.556864   \n",
-      "131    0.033534    0.137654    0.060461   -0.030463    0.067410   -0.009836   \n",
-      "132    0.010130    0.115772    0.077196   -0.003901    0.067226   -0.036150   \n",
-      "133    0.009245    0.139493    0.078878   -0.013189    0.076060   -0.015577   \n",
+      "129    0.001632    0.144628    0.056349   -0.014270    0.099502   -0.026028   \n",
+      "130    0.816281   -0.109095   -0.037096   -0.159594    0.038639    0.559293   \n",
+      "131    0.032757    0.136768    0.060870   -0.034966    0.066852   -0.010582   \n",
+      "132    0.012893    0.116481    0.078016   -0.005907    0.065187   -0.033300   \n",
+      "133    0.008872    0.137655    0.077425   -0.012473    0.076890   -0.016919   \n",
       "\n",
       "     target_423  \n",
-      "0      0.007618  \n",
-      "1      1.247395  \n",
-      "2     -0.011492  \n",
-      "3      0.029749  \n",
-      "4      0.044906  \n",
+      "0     -0.005955  \n",
+      "1      1.251850  \n",
+      "2     -0.013738  \n",
+      "3      0.026742  \n",
+      "4      0.053833  \n",
       "..          ...  \n",
-      "129    0.037455  \n",
-      "130   -0.864932  \n",
-      "131    0.106739  \n",
-      "132    0.085516  \n",
-      "133    0.165610  \n",
+      "129    0.034917  \n",
+      "130   -0.856741  \n",
+      "131    0.102464  \n",
+      "132    0.090898  \n",
+      "133    0.163862  \n",
       "\n",
       "[134 rows x 425 columns]\n",
       "Train MSE : 0.00423854823526191\n",
       "Train R2 : 0.9156912888083647\n",
-      "Train Spearman Sharpe : 0.1369329702888199\n"
+      "Train Spearman Sharpe : 0.13941334999247126\n"
      ]
     }
    ],
@@ -533,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08d56837",
+   "id": "9165a482",
    "metadata": {
     "_cell_guid": "55bc48d8-9b54-4d40-b60e-50efce747a60",
     "_uuid": "90a3e316-6295-4c0e-8e7d-6fee883c37ca",
@@ -542,10 +521,10 @@
      "outputs_hidden": false
     },
     "papermill": {
-     "duration": 0.002494,
-     "end_time": "2025-09-15T20:28:43.278592",
+     "duration": 0.00385,
+     "end_time": "2025-09-16T07:20:59.060807",
      "exception": false,
-     "start_time": "2025-09-15T20:28:43.276098",
+     "start_time": "2025-09-16T07:20:59.056957",
      "status": "completed"
     },
     "tags": []
@@ -589,14 +568,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 1264.490875,
-   "end_time": "2025-09-15T20:28:44.001807",
+   "duration": 394.61445,
+   "end_time": "2025-09-16T07:20:59.885250",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2025-09-15T20:07:39.510932",
+   "start_time": "2025-09-16T07:14:25.270800",
    "version": "2.6.0"
   }
  },
